gcc/testsuite/gdc.test/fail_compilation/ice12673.d
void main()
{
    static assert(__traits(compiles, { abcd(); }));
}
